# ytbq

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.json  docker-compose.yml  play_counts.json  pyproject.toml  queue_state.json  run.py  ytbq.db
app/: config.py  database.py  main.py
app/models/: schemas.py
app/routes/: main.py
app/services/: ngrok_tunnel.py  queue.py  youtube.py
app/templates/: base.html  main.html
app/templates/guest/: join.html
scripts/: install_deno.sh
static/css/: style.css
static/js/: guest.js  player.js
tests/: conftest.py  test_queue_service.py
