[project]
name = "ytbq"
version = "0.1.0"
description = "YouTube Jukebox - Collaborative video queue"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "yt-dlp>=2024.1.1",
    "jinja2>=3.1.2",
    "qrcode[pil]>=7.4",
    "python-multipart>=0.0.6",
    "websockets>=11.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
